--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <pre id="output"></pre>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/XYZ/exec"; // Replace with your script URL
+    const API_URL = "https://script.google.com/macros/s/AKfycbyG7H7rzVStP3-SKHy1aUIjdjjwtI5Mpv4E5ivb7WRwsT0Ul_MiY1aVU3HuGIViq7Ha/exec";
 
     function search() {
       const name = document.getElementById('nameInput').value;
