--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#666666">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <meta name="theme-color" content="#000000">
     <meta name="description" content="Gamify your life with tasks, XP, levels, and rewards">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="QOL">
@@ -34,12 +35,22 @@
             --shadow: 0 2px 8px rgba(255,255,255,0.05);
         }
 
+        html {
+            height: 100%;
+            height: 100vh;
+            height: -webkit-fill-available;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background: var(--bg-color);
             color: var(--text-color);
             line-height: 1.6;
             font-size: 16px;
+            min-height: 100%;
+            min-height: 100vh;
+            min-height: -webkit-fill-available;
+            overflow-x: hidden;
         }
 
         /* ===== Container & Layout ===== */
@@ -55,6 +66,7 @@
             background: var(--bg-color);
             border-top: 2px solid var(--border-color);
             padding: 15px 0;
+            padding-bottom: calc(15px + env(safe-area-inset-bottom));
             position: fixed;
             bottom: 0;
             left: 0;
@@ -863,9 +875,6 @@
             
             // Register service worker
             registerServiceWorker();
-
-            // Setup fullscreen on any interaction
-            setupFullscreen();
             
             // Update date and time
             updateDateTime();
@@ -885,11 +894,6 @@
             const hours = String(now.getHours()).padStart(2, '0');
             const minutes = String(now.getMinutes()).padStart(2, '0');
             document.getElementById('datetime-display').textContent = `${hours}:${minutes}, ${dayStr}, ${dateStr}`;
-        }
-
-        function setupFullscreen() {
-            window.onclick = () => document.body.requestFullscreen().catch(() => {});
-            window.ontouchstart = () => document.body.requestFullscreen().catch(() => {});
         }
 
         // ===== LOCAL STORAGE =====
