Search input placeholder text change

--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
             
             <!-- Search Bar -->
             <div class="mb-20">
-                <input type="text" id="quest-search" placeholder="🔍 Search tasks..." 
+                <input type="text" id="quest-search" placeholder="🔍 Search or Add tasks..." 
                        oninput="filterQuests()" style="margin-bottom: 0;">
             </div>
 
