Remove streak text

--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
             
             let streakText = '';
             if (task.recurrence === 'daily' && task.streak > 0) {
-                streakText = `<span class="task-badge">🔥 ${task.streak} day streak</span>`;
+                streakText = `<span class="task-badge">🔥 ${task.streak}</span>`;
             }
             
             // For multiple per day tasks, show progress
