Remove streak text

--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@
                             <div class="task-title">${task.title}</div>
                             <div class="task-meta">
                                 <span class="task-badge category-badge">${category.name}</span>
-                                <span class="task-badge">🔥 ${task.streak} days</span>
+                                <span class="task-badge">🔥 ${task.streak}</span>
                             </div>
                         </div>
                     `;
