--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Quest of Life</title>
     <link rel="icon" type="image/svg+xml" href="./favicon.png">
     <link rel="apple-touch-icon" href="./icon-192.png">
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./manifest.json?v=2">
     <style>
         /* ===== Global Styles ===== */
         * {
