--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="QOL">
+    <meta name="mobile-web-app-status-bar-style" content="black">
     <title>Quest of Life</title>
     <link rel="icon" type="image/svg+xml" href="./favicon.png">
     <link rel="apple-touch-icon" href="./icon-192.png">
