Change progress-fill background gradient colors

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         }
 
         body.dark-theme .progress-fill {
-            background: linear-gradient(90deg, #444444, #666666);
+            background: linear-gradient(90deg, #5a6bff, #ff6b9d);
             color: #e0e0e0;
         }
 
