Add gradient background to task item links in dark theme

--- a/index.html
+++ b/index.html
@@ -685,6 +685,14 @@
             background: linear-gradient(135deg, #2a2d3a 0%, #3a3f5a 100%);
         }
 
+        body.dark-theme .task-item a {
+            background-image: linear-gradient(to right, #AE8625, #F7EF8A);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            -webkit-text-fill-color: transparent; /* For Safari and older Chrome */
+        }
+        
         body.dark-theme .task-badge {
             background: linear-gradient(135deg, #3a3f5a 0%, #5a6bff 100%);
             border: 1.5px solid #5a6bff;
