Call renderQuests after resetting quest filter

--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,7 @@
         function resetQuestFilter() {
             document.getElementById('quest-search').value = '';
             questSearchTerm = '';
+            renderQuests();
         }
 
         function filterQuests() {
